--- a/desktop.css
+++ b/desktop.css
@@ -80,12 +80,23 @@
      width: 100%;
  }
 
+.tools-desktop{
+    position: absolute;
+    bottom: 272px;
+    right: 400px;
+}
+
+
  .code{
      background-color: #2EA44F;
      color: #ffff;
  }
 
-
+ .boton-main-desktop{
+    position: absolute;
+    left: 150px;
+    bottom: 276px;
+ }
 /* star */
 .boton-comun-desktop-1 {
     position: absolute;
@@ -118,6 +129,17 @@
     justify-content:center;
     align-items: center;
 }
+.usuario-container{
+    display: flex;
+    flex-direction: row;
+    min-width: 920px;
+    margin: -10px 20px 0 20px;
+    padding: 16px;
+    flex-wrap: wrap;
+    background-color: #f1f8f1ff ;
+    border-radius:6px;
+    border: solid 1px #e1e4e8 ;
+  }
 
 .container-branch{
     display: flex;
@@ -134,7 +156,8 @@
   .readme-section{
     border-radius:10px;
     border: 1px solid #e1e4e8;
-    margin: 1rem;
+    max-width: 917px;
+    margin: 20px;
     padding:1rem;
    
 }
@@ -148,8 +171,8 @@
 }
 .about-section-desktop {
     position: absolute;
-    right: 10px;
-    top: 250px;
+    right: 50px;
+    top: 248px;
     
 }
 
